HomeLayouts Little Components created

--- a/src/md/001_.md
+++ b/src/md/001_.md
@@ -1,4 +1,4 @@
-# PORTALS v0.0.1 *beta*
+# **PORTALS** v0.0.1 *beta*
 
 - ## Release date
     Release date is not defined yet, but **The Team** is alredy working on it..
